--- a/style_index.css
+++ b/style_index.css
@@ -8,9 +8,10 @@
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-    #pc{
+    #pc {
         display: none
     }
+
     .container {
         height: auto;
         /* border-bottom: 1px solid red; */
@@ -300,6 +301,7 @@
         font-size: 13px;
         height: 80px;
         margin: 10px 10px 0px 10px;
+        color: rgb(75, 75, 75);
     }
 
     .new1 p {
@@ -379,29 +381,20 @@
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
-    
-}
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-    
-}
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-    #banner2{
+    #banner2 {
         display: none;
     }
-    #mobile{
+
+    #mobile {
         display: none;
     }
+
     .container {
         display: block;
     }
 
     nav {
         z-index: 10;
-        /* z-index: 10px; */
         display: flex;
         position: fixed;
         width: 100%;
@@ -421,15 +414,18 @@
         width: 30px;
         height: auto;
     }
-    .img #banner1{
+
+    .img #banner1 {
         height: 40px;
         width: 40px;
     }
+
     nav .img img {
         height: 40px;
         width: 40px;
     }
-    nav #pc{
+
+    nav #pc {
         display: flex;
         font-family: Arial, Helvetica, sans-serif;
         width: 29%;
@@ -438,26 +434,58 @@
         margin-left: 2%;
         /* border-bottom: 1px solid gray; */
     }
-    nav #pc li{
+
+    nav #pc li {
         list-style: none;
         width: 30%;
         text-align: center;
-        border-left: 1px solid gray;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        /* height: 10px; */
+        /* height: 100%; */
+        /* border-left: 1px solid gray; */
+
     }
-    nav #pc li:last-child{
-        border-right: 1px solid gray;
+
+    nav #pc li:hover a {
+        /* list-style: armenian; */
+        color: #008116;
     }
-    nav #pc li a{
+
+    nav #pc li:hover div a {
+        color: rgb(75, 75, 75);
+    }
+
+    nav #pc li a {
+        height: 100%;
         text-decoration: none;
         font-size: 15px;
         color: rgb(94, 94, 94);
         font-weight: bolder;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         /* line-height: 4px; */
     }
+
+    nav #pc li div a:hover {
+        background-color: whitesmoke;
+        border-radius: 5px;
+    }
+
+    nav #pc li div {
+        /* float: left; */
+        width: 100%;
+        position: relative;
+        /* top: 8px; */
+        background-color: white;
+        /* border-top: 1px solid gray; */
+        display: none;
+        border-radius: 0px 0px 5px 5px;
+        padding-top: 6px;
+    }
+
+    nav #pc li:hover div {
+        display: block;
+    }
+
     nav .search {
         width: 25%;
         display: flex;
@@ -486,7 +514,8 @@
         padding-right: 8px;
         /* font-size: 1px; */
     }
-    div .menu{
+
+    div .menu {
         display: none;
     }
 
@@ -497,16 +526,18 @@
     #button1 {
         display: none;
     }
-    header{
+
+    header {
         padding-top: 70px;
     }
-    article{
+
+    article {
         width: 60%;
         margin-left: 20%;
         margin-right: 20%;
         padding-bottom: 20px;
     }
-    
+
     .text {
         font-family: Arial, Helvetica, sans-serif;
         margin-top: 50px;
@@ -523,11 +554,13 @@
         font-weight: 600;
         color: rgb(75, 75, 75);
     }
-    article .box{
+
+    article .box {
         display: flex;
         justify-content: space-between;
-        height: 200px;
+        /* height: 200px; */
     }
+
     .box1 {
         border-radius: 25px;
         border: 1px solid #008116;
@@ -539,6 +572,7 @@
         text-decoration: none;
         width: 30%;
     }
+
     article a:hover.box1 {
         /* height: 150px; */
         box-shadow: 5px 5px 5px 1px rgb(190, 190, 190);
@@ -593,11 +627,12 @@
         background-position-x: 10%;
     }
 
-    
-    .tintuc{
+
+    .tintuc {
         display: flex;
         width: 100%;
     }
+
     .new {
         /* width: 100%; */
         /* display: flex; */
@@ -605,7 +640,7 @@
         margin-bottom: 20px;
         width: 100%;
         display: flex;
-        justify-content: space-between; 
+        justify-content: space-between;
 
     }
 
@@ -632,6 +667,7 @@
         font-size: 13px;
         height: 60px;
         margin: 10px 10px 0px 10px;
+        color: rgb(75, 75, 75);
     }
 
     .new1 p {
@@ -697,8 +733,469 @@
         font-size: 11px;
     }
 
+
+
+
+
+    nav{
+        justify-content: space-between;
+        width: 100%;
+    }
+    nav .img{
+        margin-left: 20px;
+    }
+    nav #pc{
+        width: 50%;
+    }
+
+    nav #pc li a {
+        font-size: 12px;
+    }
+    nav .search{
+        margin-right: 20px;
+        width: 30%;
+    }
+    nav .search input{
+        width: 80%;
+    }
+    nav #pc li div{
+        padding-top: 9px;
+    }
+    article {
+        width: auto;
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+    .box{
+        /* height: 0px; */
+        margin: 0px;
+        padding: 0px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+    .box1{
+        height: 120px;
+    }
+    .box1 div p {
+        color: gray;
+        font-size: 10px;
+        width: 120px;
+    }
+    article .box {
+        display: flex;
+        justify-content: space-between;
+        /* height: 200px; */
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    *{
+        /* background-color: red; */
+        
+    }
+    nav #pc li a {
+        font-size: 15px;
+    }
+    nav #pc li div{
+        padding-top: 7px;
+    }
+    .box1 div p {
+        color: gray;
+        font-size: 13px;
+        width: 150px;
+    }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    *{
+        #banner2 {
+            display: none;
+        }
+    
+        #mobile {
+            display: none;
+        }
+    
+        .container {
+            display: block;
+        }
+    
+        nav {
+            z-index: 10;
+            display: flex;
+            position: fixed;
+            width: 100%;
+            height: 70px;
+            background-color: white;
+            align-items: center;
+            justify-content: center;
+            top: 0;
+        }
+    
+        nav .img {
+            display: block;
+            display: flex;
+            text-align: center;
+            justify-content: center;
+            align-items: center;
+            width: 30px;
+            height: auto;
+        }
+    
+        .img #banner1 {
+            height: 40px;
+            width: 40px;
+        }
+    
+        nav .img img {
+            height: 40px;
+            width: 40px;
+        }
+    
+        nav #pc {
+            display: flex;
+            font-family: Arial, Helvetica, sans-serif;
+            width: 29%;
+            justify-content: space-around;
+            margin-right: 2%;
+            margin-left: 2%;
+            /* border-bottom: 1px solid gray; */
+        }
+    
+        nav #pc li {
+            list-style: none;
+            width: 30%;
+            text-align: center;
+            /* height: 100%; */
+            /* border-left: 1px solid gray; */
+    
+        }
+    
+        nav #pc li:hover a {
+            /* list-style: armenian; */
+            color: #008116;
+        }
+    
+        nav #pc li:hover div a {
+            color: rgb(75, 75, 75);
+        }
+    
+        nav #pc li a {
+            height: 100%;
+            text-decoration: none;
+            font-size: 15px;
+            color: rgb(94, 94, 94);
+            font-weight: bolder;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            /* line-height: 4px; */
+        }
+    
+        nav #pc li div a:hover {
+            background-color: whitesmoke;
+            border-radius: 5px;
+        }
+    
+        nav #pc li div {
+            /* float: left; */
+            width: 100%;
+            position: relative;
+            /* top: 8px; */
+            background-color: white;
+            /* border-top: 1px solid gray; */
+            display: none;
+            border-radius: 0px 0px 5px 5px;
+            padding-top: 6px;
+        }
+    
+        nav #pc li:hover div {
+            display: block;
+        }
+    
+        nav .search {
+            width: 25%;
+            display: flex;
+            border: 1px solid rgb(173, 173, 173);
+            height: 40%;
+            border-radius: 5px;
+            justify-content: space-between;
+            align-items: center;
+        }
+    
+        nav .search input {
+            border: none;
+            padding-left: 10px;
+            outline: none;
+            height: auto;
+            font-size: 13px;
+            /* text-align: center; */
+            display: flex;
+            align-items: center;
+    
+        }
+    
+        nav .search img {
+            width: 17px;
+            height: 17px;
+            padding-right: 8px;
+            /* font-size: 1px; */
+        }
+    
+        div .menu {
+            display: none;
+        }
+    
+        #button {
+            display: none;
+        }
+    
+        #button1 {
+            display: none;
+        }
+    
+        header {
+            padding-top: 70px;
+        }
+    
+        article {
+            width: 60%;
+            margin-left: 20%;
+            margin-right: 20%;
+            padding-bottom: 20px;
+        }
+    
+        .text {
+            font-family: Arial, Helvetica, sans-serif;
+            margin-top: 50px;
+            margin-bottom: 30px;
+        }
+    
+        .text h1 {
+            font-size: 25px;
+            color: #008116;
+        }
+    
+        .text p {
+            margin-top: 15px;
+            font-weight: 600;
+            color: rgb(75, 75, 75);
+        }
+    
+        article .box {
+            display: flex;
+            justify-content: space-between;
+            /* height: 200px; */
+        }
+    
+        .box1 {
+            border-radius: 25px;
+            border: 1px solid #008116;
+            height: 140px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-family: Arial, Helvetica, sans-serif;
+            text-decoration: none;
+            width: 30%;
+        }
+    
+        article a:hover.box1 {
+            /* height: 150px; */
+            box-shadow: 5px 5px 5px 1px rgb(190, 190, 190);
+        }
+    
+    
+        article span {
+            border-radius: 25px;
+            height: 110px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+        }
+    
+    
+        .box1 div {
+            width: 40%;
+        }
+    
+        .box1 div h1 {
+            margin-bottom: 5px;
+            font-size: 19px;
+            color: #008116;
+            width: 100px;
+        }
+    
+        .box1 div p {
+            color: gray;
+            font-size: 15px;
+            width: 200px;
+        }
+    
+        .box1#box1 {
+            background: url("https://img.icons8.com/ios/100/008116/overview-pages-1.png") left;
+            background-size: 20%;
+            background-repeat: no-repeat;
+            background-position-x: 10%;
+        }
+    
+        .box1#box2 {
+            background: url("https://img.icons8.com/ios/100/008116/temple.png") left;
+            background-size: 20%;
+            background-repeat: no-repeat;
+            background-position-x: 10%;
+        }
+    
+        .box1#box3 {
+            background: url("https://img.icons8.com/ios/100/008116/phone--v1.png") left;
+            background-size: 20%;
+            background-repeat: no-repeat;
+            background-position-x: 10%;
+        }
+    
+    
+        .tintuc {
+            display: flex;
+            width: 100%;
+        }
+    
+        .new {
+            /* width: 100%; */
+            /* display: flex; */
+            height: auto;
+            margin-bottom: 20px;
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+    
+        }
+    
+        .new a {
+            /* width: 20%; */
+            width: 30%;
+    
+        }
+    
+    
+        .new1 {
+            height: 200px;
+            /* width: 80%; */
+            border: 1px solid rgb(172, 172, 172);
+            border-radius: 20px;
+            font-family: Arial, Helvetica, sans-serif;
+            /* width: 30%; */
+            width: 100%;
+    
+        }
+    
+        .new1 h1 {
+    
+            font-size: 13px;
+            height: 60px;
+            margin: 10px 10px 0px 10px;
+            color: rgb(75, 75, 75);
+        }
+    
+        .new1 p {
+            margin-left: 10px;
+            font-size: 13px;
+            color: gray;
+    
+        }
+    
+    
+        #new1 div {
+            background: url("https://denhung.phutho.gov.vn/cdn/salt/media/3ea31c4d849fa96aab9d166fe5c7c8be.png");
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+            height: 100px;
+            border-radius: 20px 20px 0px 0px;
+        }
+    
+        #new2 div {
+            background: url("https://denhung.phutho.gov.vn/cdn/salt/media/1cf2193c83007e27160ce9db0b90a02d.png");
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+            height: 100px;
+            border-radius: 20px 20px 0px 0px;
+        }
+    
+        #new3 div {
+            background: url(" https://denhung.phutho.gov.vn/cdn/salt/media/1_14065419042021.jpg");
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+            height: 100px;
+            border-radius: 20px 20px 0px 0px;
+        }
+    
+    
+        footer {
+            height: 100px;
+            background-color: whitesmoke;
+            display: flex;
+            font-family: Arial, Helvetica, sans-serif;
+            justify-content: center;
+            align-items: center;
+        }
+    
+        footer img {
+            width: 40px;
+            height: 40px;
+        }
+    
+        footer div {
+            margin-left: 10px;
+        }
+    
+        footer div h1 {
+            font-size: 17px;
+            color: black;
+        }
+    
+        footer div p {
+            font-size: 11px;
+        }
+
+        .box1 div p {
+            color: gray;
+            font-size: 10px;
+            width: 120px;
+        }
+    
+    }
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
+    *{
+        /* background-color: yellow; */
+    }
+    .box1 div p {
+        color: gray;
+        font-size: 14px;
+        width: 150%;
+    }
 }
